@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - Force requires on specific version of Time::Piece to fix an issue
+      where copy constructor was using timezones and changing the dates
+      causing tests to break. (Thanks E. Choroba)
 
 0.009     2023-02-16 10:41:11 CET
     - Depend on Alien::Font::Vera and update doc to reflect that
